z-index bug fixed

--- a/src/Pages/Inicio/styles.css
+++ b/src/Pages/Inicio/styles.css
@@ -105,13 +105,13 @@
   
   .leaflet-container {
     margin-left: 0;
-  }
+  } 
   
   .info {
     /* text-align: center; */
     font-size: 12px;
     padding: 2px 2px;
-    margin: 0 0 0 0;
+    margin: 0 10px 0 0;
   }
   
   
@@ -131,13 +131,13 @@
      bottom: 0;
      left: 0;
      right: auto;
-     z-index: 10001;
+     z-index: 1450;
      background-color: black;
      opacity: 0.79;
      color: white;
      border-radius: 8px;
      padding: 8px 10px;
-     margin: 0 20px 20px 0;
+     margin: 0 20px 20px 10px;
   }
   
   .legenda .item {
