--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -7,7 +7,7 @@
   text-align: center;
   color: white; 
   position: fixed;
-  z-index: 1000;
+  z-index: 1500;
   width: 100px;
   background-color: black;
   box-shadow: 0px 13px 30px rgba(0, 0, 0, 0.8);
@@ -20,7 +20,7 @@
   background: none;
   border: 0;
   top: 50%;
-  z-index: 1001;
+  z-index: 1002;
   cursor: pointer;
   outline: 0;
   transition: 300ms;
